Fixed: (UI) Break words when too long in track file details

--- a/frontend/src/TrackFile/FileDetails.css
+++ b/frontend/src/TrackFile/FileDetails.css
@@ -1,6 +1,7 @@
 .audioTags {
   padding-top: 15px;
   padding-bottom: 15px;
+  word-break: break-word;
   /* border-top: 1px solid $borderColor; */
 }
 
